# conterminator

./: .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
data/: CMakeLists.txt  conterminator.sh  conterminatordna.sh  conterminatorprotein.sh
example/: Escherichia_coli.HUSEC2011CHR1.dna.chromosome.Chromosome.fa  dna.fas  dna.mapping  prots.fas  prots.mapping
src/: CMakeLists.txt  conterminator.cpp
src/commons/: CMakeLists.txt  IntervalArray.h  IntervalTree.h  KingdomExpression.h  LocalCommandDeclarations.h  LocalParameters.h
src/conterminatorutils/: CMakeLists.txt  TaxonUtils.h  createallreport.cpp  createstats.cpp  crosstaxonfilter.cpp  crosstaxonfilterorf.cpp  distanceton.cpp  extractalignments.cpp  multipletaxas.cpp  multipletaxas.h  predictcontamination.cpp
src/version/: CMakeLists.txt
src/workflow/: CMakeLists.txt  Conterminatordna.cpp  Conterminatorprotein.cpp  Conterminatorworkflow.cpp
